# ecs-system

./: CMakeLists.txt  README.md
Source/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  Coordinator.hpp  EntityManager.hpp  PhysicsSystem.hpp  System.hpp  SystemManager.hpp  main.cpp  type.hpp  vec3.hpp
Source/Components/: Transform.hpp
